Fix duplicate HTML structure in index.html
Removed duplicate HTML structure and cleaned up code.

--- a/index.html
+++ b/index.html
@@ -95,3 +95,54 @@
   </script>
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Life•Glitch Studio</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+</head>
+<body>
+  <div class="loader">
+    <div class="glitch-logo">LG</div>
+  </div>
+
+  <div class="app">
+    <img src="assets/avatar/avatar.png" alt="Life Glitch Avatar" class="avatar">
+    <h1>Welcome to Life•Glitch</h1>
+    <p id="ideaOutput">Tap below to generate an idea.</p>
+    <button onclick="generateIdea()">Generate Glitch Idea</button>
+
+    <footer>Created by Life•Glitch Studio</footer>
+  </div>
+
+  <script src="script.js"></script>
+</body>
+</html><!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Life•Glitch Studio</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+</head>
+<body>
+  <div class="loader">
+    <div class="glitch-logo">LG</div>
+  </div>
+
+  <div class="app">
+    <img src="assets/avatar/avatar.png" alt="Life Glitch Avatar" class="avatar">
+    <h1>Welcome to Life•Glitch</h1>
+    <p id="ideaOutput">Tap below to generate an idea.</p>
+    <button onclick="generateIdea()">Generate Glitch Idea</button>
+
+    <footer>Created by Life•Glitch Studio</footer>
+  </div>
+
+  <script src="script.js"></script>
+</body>
+</html>
